After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753339 - validate: scenario: fix leak during error cases
validate: scenario: fix leak during error cases
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-devtools
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-07 03:51 UTC by Vineeth
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memory leak (1.11 KB, patch)
2015-08-07 03:53 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-08-07 03:51:41 UTC
When message_async is not called during error cases, needs_parsing GList is not being freed resulting in leak. Hence free'ing the same in finalize.


The leak is as follows

==24920== 2,944 (12 direct, 2,932 indirect) bytes in 1 blocks are definitely lost in loss record 6,255 of 6,324
==24920==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==24920==    by 0x43D2BE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==24920==    by 0x43E9281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==24920==    by 0x43C93E0: g_list_append (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==24920==    by 0x41F75EC: _fill_action (gst-validate-scenario.c:1231)
==24920==    by 0x41F79BB: _load_scenario_file (gst-validate-scenario.c:2260)
==24920==    by 0x41F8EC6: gst_validate_scenario_factory_create (gst-validate-scenario.c:2312)
==24920==    by 0x41E7785: gst_validate_pipeline_monitor_new (gst-validate-pipeline-monitor.c:204)
==24920==    by 0x41F1907: gst_validate_monitor_factory_create (gst-validate-monitor-factory.c:65)
==24920==    by 0x804A12D: main (gst-validate.c:552)
Comment 1 Vineeth 2015-08-07 03:53:29 UTC
Created attachment 308873 [details] [review]
fix memory leak
Comment 2 Thibault Saunier 2015-08-07 08:22:34 UTC
commit 14414c13c5cc75525e3e7bb118dfbd588d0b9acc
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Fri Aug 7 12:51:53 2015 +0900

    validate: scenario: fix leak during error cases
    
    When message_async is not called during error cases, needs_parsing GList is
    not being freed resulting in leak. Hence free'ing the same in finalize.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753339